@@ -15,3 +15,4 @@
 * fix docu
 * id `altitude_scale`
 * fix analemma height #3
+* visible horizon in sky map
